# dviglo2d

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  add_submodules.sh  build_linux.sh  build_mingw.bat  build_vs.bat  readme.md  remove_spaces.py  remove_submodules.sh  update_submodules.sh
engine/: .gitattributes  .gitignore  CMakeLists.txt  build_linux.sh  build_mingw.bat  build_vs.bat
engine/cmake/: cmake_min_version.cmake  common.cmake
engine/docs/: building.md  conventions.md  freetype.md  input_lag.md  opengl.md  vulkan.md
engine/dviglo/: CMakeLists.txt
engine/dviglo/audio/: audio.cpp  audio.hpp
engine/dviglo/base/: subsystem.hpp
engine/dviglo/common/: cast.hpp  platform.hpp  primitive_types.cpp  primitive_types.hpp  windows_wrapped.hpp
engine/dviglo/fs/: file.cpp  file.hpp  file_base.hpp  fs_base.cpp  fs_base.hpp  log.cpp  log.hpp  path.hpp
engine/dviglo/gl_utils/: fbo.cpp  fbo.hpp  gl_utils.cpp  gl_utils.hpp  index_buffer.cpp  index_buffer.hpp  shader_cache.cpp  shader_cache.hpp  shader_cache_old.cpp  shader_cache_old.hpp  shader_program.cpp  shader_program.hpp  texture.cpp  texture.hpp  texture_cache.cpp  texture_cache.hpp  vertex_buffer.hpp
engine/dviglo/graphics/: sprite_batch.cpp  sprite_batch.hpp  sprite_batch_old.cpp  sprite_batch_old.hpp
engine/dviglo/main/: application.cpp  application.hpp  application_base.cpp  application_base.hpp  config_base.hpp  engine_params.cpp  engine_params.hpp  graphics.cpp  graphics.hpp  main.cpp  main.hpp  main_args.cpp  main_args.hpp  os_window.cpp  os_window.hpp  timer.cpp  timer.hpp
engine/dviglo/math/: color.hpp  math.cpp  math.hpp  random.hpp  rect.hpp
engine/dviglo/res/: freetype.cpp  freetype.hpp  freetype_misc.hpp  freetype_utils.hpp  image.cpp  image.hpp  sprite_font.cpp  sprite_font.hpp  sprite_font_generator.cpp  stb_image_write_wrapped.hpp
engine/dviglo/std_utils/: flags.hpp  fs.hpp  scope_guard.hpp  string.hpp
engine/dviglo/vk_utils/: swapchain.cpp  swapchain.hpp  vk_utils.cpp  vk_utils.hpp  vulkan_wrapped.hpp
engine/dviglo/vulkan/: offscreen_image.cpp  offscreen_image.hpp  swapchain.cpp  swapchain.hpp  texture_cache_new.cpp  texture_cache_new.hpp  texture_set.cpp  texture_set.hpp  vulkan_image.cpp  vulkan_image.hpp  vulkan_implementation.cpp  vulkan_utils.cpp  vulkan_utils.hpp
engine/engine_test_data/audio/: licenses.md
engine/engine_test_data/fonts/ubuntu/: dv_notes.md
engine/engine_test_data/shaders/: inverse.frag
engine/libs/dv_sdl/: CMakeLists.txt  dv_sdl_props.hpp  dv_sdl_utils.hpp  placeholder.cpp
engine/libs/dv_std_lib/: CMakeLists.txt  build_linux.sh  build_mingw.bat  build_vs.bat  readme.md
engine/libs/dv_std_lib/docs/: dv_string.md
engine/libs/dv_std_lib/lib/: dv_file.cpp  dv_file.hpp  dv_flags.hpp  dv_force_assert.hpp  dv_fs.cpp  dv_fs.hpp  dv_locale.cpp  dv_locale.hpp  dv_log.cpp  dv_log.hpp  dv_math.hpp  dv_meta.hpp  dv_platform.hpp  dv_primitive_types.hpp  dv_random.hpp  dv_scope_guard.hpp  dv_string.hpp  dv_subsystem.hpp  dv_subsystem_base.hpp  dv_subsystem_index.hpp  dv_tee_buffer.cpp  dv_tee_buffer.hpp  dv_unistd.cpp  dv_unistd.hpp  dv_windows_wrapped.hpp
engine/libs/dv_std_lib/tester/: dv_flags.cpp  dv_fs.cpp  dv_math.cpp  dv_primitive_types.cpp  dv_string.cpp  main.cpp
engine/result/engine_data/shaders/: basic.frag  (+11 more)
engine/shaders_src/: fullscreen_triangle.vert  sb.frag  sb.vert  simple.frag  simple.vert  test.comp  texture_shader.vert  to_srgb.frag  vert_color_texture.vert
engine/tests/: CMakeLists.txt
engine/tests/benchmark/: CMakeLists.txt  app.cpp  app.hpp  config.cpp  config.hpp  main.cpp
engine/tests/hello/: CMakeLists.txt  app.cpp  app.hpp  config.cpp  config.hpp  main.cpp
engine/tests/tester/: CMakeLists.txt  force_assert.hpp  main.cpp
games/letalka/: CMakeLists.txt  readme.md
games/letalka/src/: app.cpp  app.hpp  config.cpp  config.hpp  ecs_common.cpp  ecs_common.hpp  ecs_enemies.cpp  ecs_enemies.hpp  ecs_main.cpp  ecs_main.hpp  ecs_player.cpp  ecs_player.hpp  ecs_projectiles.cpp  ecs_projectiles.hpp  ecs_spawn_enemy.cpp  ecs_spawn_enemy.hpp  ecs_weapons.cpp  ecs_weapons.hpp  global.cpp  global.hpp  main.cpp
libs/dv_imgui/: CMakeLists.txt  dv_imgui_application.cpp  dv_imgui_application.hpp  dv_imgui_misc.cpp  dv_imgui_misc.hpp
libs/dviglo/: CMakeLists.txt
libs/dviglo/audio/: audio.cpp  audio.hpp
libs/dviglo/common/: config.h  primitive_types.cpp  primitive_types.hpp  win_wrapped.hpp
libs/dviglo/fs/: file.cpp  file.hpp  log.cpp  log.hpp
libs/dviglo/gl_utils/: fbo.cpp  fbo.hpp  gl_common.h  gl_common.hpp  gl_utils.cpp  gl_utils.hpp  index_buffer.cpp  index_buffer.h  index_buffer.hpp  shader_cache.cpp  shader_cache.h  shader_cache.hpp  shader_program.cpp  shader_program.h  shader_program.hpp  texture.cpp  texture.h  texture.hpp  texture_cache.cpp  texture_cache.h  texture_cache.hpp  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer.hpp
libs/dviglo/graphics/: sprite_batch.cpp  sprite_batch.h  sprite_batch.hpp  sprite_font.cpp  sprite_font.h  sprite_font.hpp
libs/dviglo/io/: file.cpp  file.h  file.hpp  file_base.h  file_base.hpp  fs_base.cpp  fs_base.h  fs_base.hpp  log.cpp  log.h  log.hpp  path.h  path.hpp
libs/dviglo/main/: application.cpp  application.h  application.hpp  engine.cpp  engine.h  engine_params.cpp  engine_params.hpp  main.cpp  main.h  main.hpp  os_window.cpp  os_window.hpp
libs/dviglo/math/: big_int.cpp  big_int.hpp  math.cpp  math.h  math.hpp  rect.h  rect.hpp
libs/dviglo/res/: image.cpp  image.h  image.hpp
libs/dviglo/std_utils/: flags.h  flags.hpp  scope_guard.hpp  str.cpp  str.h  str.hpp  string.hpp
minimal_app/: CMakeLists.txt  build_linux.sh  build_mingw.bat  build_vs.bat  readme.md
minimal_app/app_data/: placeholder
minimal_app/src/: app.cpp  app.hpp  config.cpp  config.hpp  main.cpp  my_subsystem.cpp  my_subsystem.hpp
tools/: CMakeLists.txt
tools/tester/: CMakeLists.txt
tools/tests/: CMakeLists.txt  force_assert.hpp  main.cpp
tools/tests/fs/: path.cpp
tools/tests/io/: path.cpp
tools/tests/math/: big_int.cpp
tools/tests/std_utils/: str.cpp
(+162 files in other folders)
